address PR comments re: Mixpanel properties

--- a/app/views/site/_study_download_data.html.erb
+++ b/app/views/site/_study_download_data.html.erb
@@ -159,7 +159,7 @@
                 `accessions=${accession}` +
                 `&auth_code=${authCode}` +
                 `&directory=${downloadObjectName}` +
-                `&source=study`
+                `&context=study`
               );
 
               // if this is a single-directory download, append 'file_types=None' to exclude all other files from
