--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -59,7 +59,7 @@
       var userId = window.SCP.userId;
 
       // stats for search UI
-      window.SCP.studyStats = <%= SummaryStatsUtils.study_counts.to_json.html_safe %>;
+      window.SCP.studyStats = <%= ReportTimePoint.get_latest_report(ReportTimePoint::STUDY_COUNTS).value.to_json.html_safe %>;
 
       window.ga=window.ga||function() {(ga.q=ga.q||[]).push(arguments)}; ga.l=+new Date
       ga('create', window.SCP.gaTrackingId, 'auto')
