--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -57,7 +57,7 @@
                               class: 'check-upload', id: 'preset-nav' %></li>
               <li><%= link_to "<span class='fas fa-dna fa-fw'></span> Species".html_safe, taxons_path, class: 'check-upload',
                               id: 'species-nav' %></li>
-              <li><%= scp_link_to "<span class='fas fa-copyright fa-fw'></span> Branding groups".html_safe, branding_groups_path,
+              <li><%= scp_link_to "<span class='fas fa-copyright fa-fw'></span> Collections".html_safe, branding_groups_path,
                                   class: 'check-upload', id: 'branding-groups-nav' %>
               <li><%= scp_link_to "<span class='fas fa-bullhorn fa-fw'></span> Feature announcements".html_safe,
                                   feature_announcements_path, class: 'check-upload', id: 'feature-announcements-nav' %>
