--- a/app/javascript/styles/_global.scss
+++ b/app/javascript/styles/_global.scss
@@ -795,3 +795,8 @@ figcaption.ck-editor__editable {
   display: flex;
   align-items: center;
 }
+
+.unset-background-border-style {
+  background: unset;
+  border: unset;
+}
