--- a/app/javascript/styles/_global.scss
+++ b/app/javascript/styles/_global.scss
@@ -796,7 +796,7 @@ figcaption.ck-editor__editable {
   align-items: center;
 }
 
-.unset-background-border-style {
+.unset-background-border {
   background: unset;
   border: unset;
 }
