fixing upload wizard warning display

--- a/app/javascript/styles/_uploadWizard.scss
+++ b/app/javascript/styles/_uploadWizard.scss
@@ -119,6 +119,10 @@
   color: $danger-color;
 }
 
+.validation-warning {
+  color: $warning-icon-color;
+}
+
 .prev-next-buttons {
   margin-left: auto;
 }
