--- a/app/views/studies/index.html.erb
+++ b/app/views/studies/index.html.erb
@@ -19,19 +19,19 @@
 					<% @studies.each do |study| %>
 						<tr class="study-entry">
               <td class="study-name"><%= scp_link_to study.name, view_study_path(accession: study.accession, study_name: study.url_safe_name), title: 'View Live', data: {toggle: 'tooltip', placement: 'right'}, id: "#{study.url_safe_name}-view-live-link" %></td>
-              <td><%= study.user.email %></td>
-							<td><%= study.description.truncate_words(10, omission: '...') %></td>
+              <td><%= study.user&.email %></td>
+							<td><%= study.description&.truncate_words(10, omission: '...') %></td>
 							<td><%= study.visibility %></td>
               <td id="<%= study.url_safe_name %>-study-file-count"><%= study.total_file_count %></td>
 							<td>
                 <% if study.can_edit?(current_user) %>
-                  <%= scp_link_to "<span class='fas fa-info-circle'></span> Show details".html_safe, study_path(study), 
+                  <%= scp_link_to "<span class='fas fa-info-circle'></span> Show details".html_safe, study_path(study),
                     class: "btn btn-xs btn-info #{study.url_safe_name}-show", title: 'View/Edit your study description' , data: {toggle: 'tooltip', placement: 'top'} %>
-                  <%= scp_link_to "<span class='fas fa-upload'></span> Upload/Edit data".html_safe, initialize_study_path(study), 
+                  <%= scp_link_to "<span class='fas fa-upload'></span> Upload/Edit data".html_safe, initialize_study_path(study),
                   class: "btn btn-xs btn-success #{study.url_safe_name}-upload", title: 'Add new files to your study' , data: {toggle: 'tooltip', placement: 'top'}  %>
-                  <%= scp_link_to "<span class='fas fa-sync-alt'></span> Sync workspace".html_safe, sync_study_path(study), 
+                  <%= scp_link_to "<span class='fas fa-sync-alt'></span> Sync workspace".html_safe, sync_study_path(study),
                   class: "btn btn-xs btn-warning #{study.url_safe_name}-sync sync-button", title: 'Sync files from your workspace to your study' , data: {toggle: 'tooltip', placement: 'top'} %>
-                  <%= scp_link_to "<span class='fas fa-edit'></span> Edit study".html_safe, edit_study_path(study), 
+                  <%= scp_link_to "<span class='fas fa-edit'></span> Edit study".html_safe, edit_study_path(study),
                   class: "btn btn-xs btn-primary #{study.url_safe_name}-edit", title: 'View/Update the settings for your study' , data: {toggle: 'tooltip', placement: 'top'} %>
                   <% if study.can_delete?(current_user) %>
                     <%= scp_link_to "<span class='fas fa-trash'></span> Delete study & workspace".html_safe, study_path(study),
