--- a/app/javascript/styles/_search.scss
+++ b/app/javascript/styles/_search.scss
@@ -183,7 +183,6 @@ nav.search-links, #search-panel {
 
   .filters-box-searchable, #facets-accordion {
     width: 560px;
-    margin-left: -220px;
     border: 1px solid #aaa;
     background: #fff;
     position: absolute;
@@ -274,7 +273,6 @@ nav.search-links, #search-panel {
 
   .combined-facet {
     width: auto;
-    margin-left: -300px;
     .filters-box-searchable {
       width: 390px;
       margin-left: 0;
@@ -368,4 +366,24 @@ nav.search-links, #search-panel {
 
 .download-url-modal .input-group {
   margin: 1em 0 2em 0;
+}
+
+span.search-title {
+  background-color: #4d72aa;
+  font-size: smaller;
+  display: block;
+  margin: 3px 0;
+  opacity: 50%;
+}
+
+span.metadata-search {
+  width: 98%;
+}
+
+span.text-search {
+  width: 312px;
+}
+
+.advanced-opts {
+  margin-top: 23px;
 }
