--- a/app/views/site/_study_download_data.html.erb
+++ b/app/views/site/_study_download_data.html.erb
@@ -147,8 +147,8 @@
 
               // This is what the user will run in their terminal to download the data.
               var downloadCommand = (
-                  `${curlExec} &quot;${url}&quot; ${curlSecureFlag} -o cfg.txt; ' +
-                  `${curlExec} -K cfg.txt && rm cfg.txt`
+                  `${curlExec} &quot;${url}&quot; ${curlSecureFlag} -o cfg.txt; ` +
+                  `${curlExec} -K cfg.txt; rm cfg.txt`
               );
 
               var commandID = 'command-' + authCode;
