--- a/app/views/studies/show.html.erb
+++ b/app/views/studies/show.html.erb
@@ -53,7 +53,7 @@
                   <td><%= @study.firecloud_project %>/<%= @study.firecloud_workspace %></td>
                   <td>
                     <%= link_to_if !@study.firecloud_workspace.nil?,
-                                   "<span class='fas fa-cloud'></span> View terra workspace".html_safe,
+                                   "<span class='fas fa-cloud'></span> View Terra workspace".html_safe,
                                    @study.workspace_url, class: 'btn btn-info', id: 'firecloud-link', target: :_blank,
                                    rel: 'noopener noreferrer' %>
                   </td>
@@ -62,7 +62,7 @@
                   <td>Google Storage Bucket</td>
                   <td><%= @study.bucket_id %></td>
                   <td>
-                    <%= link_to_if !@study.bucket_id.nil?, "<span class='fas fa-database'></span> View google bucket".html_safe,
+                    <%= link_to_if !@study.bucket_id.nil?, "<span class='fas fa-database'></span> View Google bucket".html_safe,
                                    @study.google_bucket_url, class: 'btn btn-success', id: 'gcs-link', target: :_blank,
                                    rel: 'noopener noreferrer' %>
                   </td>
