--- a/app/views/studies/_shared_sync_functions.js.erb
+++ b/app/views/studies/_shared_sync_functions.js.erb
@@ -1,5 +1,9 @@
 // shared JS functions for sync forms
 
+if (typeof window.SCP.readOnlyToken === 'undefined') {
+  window.SCP.readOnlyToken = '<%= get_read_access_token(@study, current_user) %>'
+}
+
 $('#study-file-<%= study_file.id %>').on('change', '.file-type', function() {
     var form = $(this).closest('form');
     var fileName = form.find('.filename').val();
@@ -8,6 +12,9 @@ $('#study-file-<%= study_file.id %>').on('change', '.file-type', function() {
     var extraInfo = $('#study-file-<%= study_file.id %>-extra-info');
     var taxonTarget = form.find('.taxon-select-target');
     var submitBtn = $('#sync-study-file-<%= study_file.id %>');
+    const bucketName = '<%= @study.bucket_id %>'
+
+    window.SCP.validateRemoteFileContent(bucketName, fileName, fileType);
 
     // render fields & process entries based on file type
     if (fileType === 'Cluster') {
