Link sync survey

--- a/app/views/studies/sync_study.html.erb
+++ b/app/views/studies/sync_study.html.erb
@@ -13,6 +13,20 @@
     </p>
   </div>
 </div>
+<a
+  href="https://forms.gle/V6uT94jbGq5pTeMG6"
+  class="btn btn-primary"
+  rel="noopener"
+  data-analytics-name="sync-survey-link"
+  data-toggle="tooltip"
+  data-original-title="Go to survey"
+  data-placement="right"
+  style="margin: 5px;"
+>
+  Take a 3-question survey to help improve sync
+</a>
+
+
 <% if params[:configuration_name].present? && @special_sync %>
   <div class="bs-callout bs-callout-default">
     <h4>Specialized sync for: <span class="label label-primary"><%= params[:configuration_name] %></span></h4>
