--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -231,7 +231,7 @@
 <input type="hidden" id="user-provider-info" value='<%=
   {
     email: current_user&.email,
-    featureFlagsWithDefaults: FeatureFlaggable.feature_flags_for_instances(@selected_branding_group, current_user)
+    featureFlagsWithDefaults: FeatureFlaggable.feature_flags_for_instances(@selected_branding_group, current_user, @study)
   }.to_json %>'/>
 </body>
 </html>
