--- a/app/views/studies/sync_study.html.erb
+++ b/app/views/studies/sync_study.html.erb
@@ -13,18 +13,21 @@
     </p>
   </div>
 </div>
-<a
-  href="https://forms.gle/V6uT94jbGq5pTeMG6"
-  class="btn btn-primary"
-  rel="noopener"
-  data-analytics-name="sync-survey-link"
-  data-toggle="tooltip"
-  data-original-title="Go to survey"
-  data-placement="right"
-  style="margin: 5px;"
->
-  Take a 3-question survey to help improve sync
-</a>
+<div class="row">
+  <div class="col-md-12 bottom-pad">
+    <a
+      href="https://forms.gle/V6uT94jbGq5pTeMG6"
+      class="btn terra-secondary-btn"
+      rel="noopener"
+      data-analytics-name="sync-survey-link"
+      data-toggle="tooltip"
+      data-original-title="Go to survey"
+      data-placement="right"
+    >
+      Take a 3-question survey to help improve sync
+    </a>
+  </div>
+</div>
 
 
 <% if params[:configuration_name].present? && @special_sync %>
