--- a/app/views/studies/sync_study.html.erb
+++ b/app/views/studies/sync_study.html.erb
@@ -19,6 +19,7 @@
       href="https://forms.gle/V6uT94jbGq5pTeMG6"
       class="btn terra-secondary-btn"
       rel="noopener"
+      target="_blank"
       data-analytics-name="sync-survey-link"
       data-toggle="tooltip"
       data-original-title="Go to survey"
