--- a/app/views/studies/initialize_study.html.erb
+++ b/app/views/studies/initialize_study.html.erb
@@ -417,6 +417,7 @@
   <div id="upload-wizard-target">
   </div>
   <script type="text/javascript" nonce="<%= content_security_policy_script_nonce %>">
+    window.SCP.readOnlyToken = '<%= get_read_access_token(@study, current_user) %>'
     $(document).ready(function() {
       window.SCP.renderUploadWizard(document.getElementById('upload-wizard-target'), '<%= @study.accession %>', '<%= @study.name %>')
     })
