--- a/app/views/studies/_shared_sync_functions.js.erb
+++ b/app/views/studies/_shared_sync_functions.js.erb
@@ -19,9 +19,13 @@ function getIssuesHtml(fileName, errorMsgs, warningMsgs) {
     const errorListHtml = errorMsgs.map((error, index) => {
       return `<li class="error-message">${error}</li>`
     })
+    const refresh =
+      '<a href="" data-analytics-name="sync-validation-refresh">' +
+        'Refresh the page' +
+      '</a>'
     issuesHtml +=
       '<div class="validation-error">' +
-        `Could not use ${fileName}:` +
+        `Errors found.  ${refresh} after you correct ${fileName}.` +
         `<ul class="validation-error">${errorListHtml}</ul>` +
       '</div>'
   }
@@ -145,7 +149,6 @@ $('#study-file-<%= study_file.id %>').on('change', '.file-type', async function(
       bucketName, fileName, fileType, fileOptions
     );
 
-    console.log('results', results)
     const errorMsgs = results.errors.map(error => error[2])
     const warningMsgs = results.warnings.map(error => error[2])
 
