--- a/app/views/studies/_shared_sync_functions.js.erb
+++ b/app/views/studies/_shared_sync_functions.js.erb
@@ -19,22 +19,27 @@ function getIssuesHtml(errorMsgs, warningMsgs, fileName, fileId) {
     const errorListHtml = errorMsgs.map((error, index) => {
       return `<li class="error-message">${error}</li>`
     })
+
+    // Note errors and inform user how to try again
     const refresh =
       '<a href="" data-analytics-name="sync-validation-refresh">' +
         'Refresh the page' +
       '</a>'
+    const errorTxt = 'Error' + (errorMsgs.length > 0 ? 's' : '')
     issuesHtml +=
       '<div class="validation-error">' +
-        `Errors found.  ${refresh} after you correct ${fileName}.` +
+        `${errorTxt} found.  ${refresh} after you correct ${fileName}.` +
         `<ul class="validation-error">${errorListHtml}</ul>` +
       '</div>'
 
+    // Disable the "Sync" button
     $(`#sync-study-file-${fileId}`)
       .prop('disabled', true)
       .attr('data-toggle', 'tooltip')
       .attr('data-original-title', 'Fix validation errors, then refresh')
       .attr('data-placement', 'left')
   }
+
   if (warningMsgs.length > 0) {
     const warningListHtml = errorMsgs.map((error, index) => {
       return `<li class="error-message">${error}</li>`
@@ -147,11 +152,20 @@ $('#study-file-<%= study_file.id %>').on('change', '.file-type', async function(
         }
     }
 
-    const bucketName = '<%= @study.bucket_id %>'
+    // FileUploadControl updates this more elegantly via React,
+    // but this direct approach is easier and as effective here.
+    let useConvention = false
+    if (fileType === 'Metadata') {
+      const conventionSelector =
+        '#study-file-<%= study_file.id %> ' +
+        '#study_file_use_metadata_convention_true'
+      useConvention = ($(conventionSelector)[0].checked === true)
+    }
     const fileOptions = {
-      use_metadata_convention: <%= study_file.use_metadata_convention %>
+      use_metadata_convention: useConvention
     }
 
+    const bucketName = '<%= @study.bucket_id %>'
     const results = await window.SCP.validateRemoteFileContent(
       bucketName, fileName, fileType, fileOptions
     );
