--- a/app/views/site/_reviewer_access_fields.html.erb
+++ b/app/views/site/_reviewer_access_fields.html.erb
@@ -1,4 +1,4 @@
-<div class="well well-sm" id="reviewer-access-controls">
+<div id="reviewer-access-controls">
   <div class="form-group row">
     <div class="col-md-2">
       <% access_enabled = f.object.persisted? %>
