--- a/app/views/site/_study_settings_form.html.erb
+++ b/app/views/site/_study_settings_form.html.erb
@@ -36,7 +36,7 @@
         <%= render partial: 'study_settings_sharing', locals: { f: f } %>
       </div>
       <div class="tab-pane" id="settings-authors">
-        <%= render 'study_settings_authors', locals: { f: f } %></div>
+        <%= render partial: 'study_settings_authors', locals: { f: f } %></div>
     </div>
   </div>
   <div class="form-group row">
