Update style on wizard
- Add styling to account for a long study title
- Update handling of size of content to fill space better

--- a/app/javascript/styles/_global.scss
+++ b/app/javascript/styles/_global.scss
@@ -808,3 +808,9 @@ figcaption.ck-editor__editable {
   background: unset;
   border: unset;
 }
+
+.no-wrap-ellipsis {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
