--- a/app/javascript/styles/_global.scss
+++ b/app/javascript/styles/_global.scss
@@ -702,7 +702,7 @@ ul.pager li.dimmed {
   padding-right: 15px;
 }
 
-#metadata-convention-explainer {
+#overflow-x-scroll {
   overflow-x: scroll;
 }
 
