--- a/app/views/studies/initialize_study.html.erb
+++ b/app/views/studies/initialize_study.html.erb
@@ -174,7 +174,7 @@
         <div class="well well-sm container-fluid upload-wizard">
           <div class="row">
             <h2 class="col-sm-12">Step 3. Upload Metadata File <small class="initialize-label" id="initialize_metadata_form_completed"></small></h2>
-            <div class="col-sm-12" id="metadata-convention-explainer">
+            <div class="col-sm-12" id="overflow-x-scroll">
               <%= image_tag "metadata-convention-explainer.jpg" %>
             </div>
           </div>
