layout tweaks, fixing PMC links

--- a/app/javascript/styles/_global.scss
+++ b/app/javascript/styles/_global.scss
@@ -809,7 +809,7 @@ figcaption.ck-editor__editable {
   border: unset;
 }
 
-.study-description-row {
+#study-description-row {
   display: flex;
 }
 
@@ -821,6 +821,8 @@ figcaption.ck-editor__editable {
   border-left: 3px solid $action-color;
   min-width: 350px;
   max-width: 350px;
+  max-height: 600px;
+  overflow-y: auto;
   padding: 10px 15px;
   transition: all 0.3s;
 }
@@ -828,6 +830,7 @@ figcaption.ck-editor__editable {
 #study-sidebar-content.closed {
   right: -350px;
   margin-left: -350px;
+  overflow-y: inherit;
 }
 
 #toggle-study-resources {
@@ -840,4 +843,8 @@ figcaption.ck-editor__editable {
 #toggle-study-resources.closed {
   top: -40px;
   left: -60px;
+}
+
+.publication-link {
+  margin-bottom: 10px;
 }
