--- a/app/views/site/_study_description_view.html.erb
+++ b/app/views/site/_study_description_view.html.erb
@@ -1,4 +1,4 @@
-<div class="row study-description-row">
+<div class="row" id="study-description-row">
   <div class="col-md-12">
     <div id="study-description-content" class="ck-content">
       <%= @study.full_description.html_safe %>
